REACT | spretorius | - Removed Flux architecture - Added React Redux as state store

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
 
 	<meta name="viewport" content="width=device-width" initial-scale="1">
 
-	<title id="view-title">APPLICATION</title>
+	<title id="view-title">React Application</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -19,7 +19,7 @@
 <body>
 
 	<div id="view-application"></div>
-	<script src="/javascripts/application.js"></script>
+	<script src="/javascripts/router.js"></script>
 
 </body>
 </html>
