REACT | spretorius | - Folder restructure

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,12 +14,13 @@
 	<title id="view-title">React Application</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/application.css">
 
 </head>
 <body>
 
 	<div id="view-application"></div>
-	<script src="/javascripts/router.js"></script>
+	<script src="/application.js"></script>
 
 </body>
 </html>
