REACT | spretorius | - Added file loade to support images

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="/application.css">
 
 </head>
-<body>
+<body id="document">
 
 	<div id="view-application"></div>
 	<script src="/application.js"></script>
