REACT | spretorius | test components added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,18 +6,16 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="description" content="Application Styleguide">
+	<meta name="description" content="Welcome to Snappy">
 
-	<title id="view-title">React Application</title>
+	<title id="view-title">Welcome to Snappy</title>
 
 	<link rel="stylesheet" href="/application.css">
 
 </head>
 <body id="document">
-
 	<div id="view-application"></div>
 	<script src="/application.js"></script>
-
 </body>
 </html>
 
